# deskapp

./: .gitignore  Makefile  TODO  pyproject.toml  yml-generator.py
apps/: admin.py  forms.py  models.py  urls.py  views.py
apps/fixtures/: category.yaml  product.yaml  users.yaml
apps/migrations/: 0001_initial.py  0002_alter_product_detail.py
root/: settings.py  urls.py
shared/: models.py
templates/: base.html  index.html  product-detail.html
templates/auth/: activate-account-for-forgot-password.html  activate-account-for-register.html  base.html  email_page.html  forgot-password.html  login.html  password_reset.html  register.html
templates/deskapp-master/: advanced-components.html  apexcharts.html  basic-table.html  blank.html  blog-detail.html  blog.html  bootstrap-icon.html  calendar.html  chat.html  color-settings.html  contact-directory.html  custom-icon.html  datatable.html  faq.html  font-awesome.html  forgot-password.html  form-basic.html  form-pickers.html  form-wizard.html  foundation.html  gallery.html  getting-started.html  highchart.html  html5-editor.html  image-cropper.html  image-dropzone.html  index.html  index2.html  index3.html  introduction.html  invoice.html  ionicons.html  jvectormap.html  knob-chart.html  login.html  pricing-table.html  product-detail.html  product.html  profile.html  register.html  (+19 more)
templates/ecommerce-template-master/: cart.html  category.html  index.html  login.html  register.html
templates/products/: add_product.html  (+2 more)
users/: auth_views.py  backends.py  forms.py  models.py  send_to_email.py  urls.py
(+2 files in other folders)
